# itc-node-rs

./: .env.example  Cargo.toml  LICENSE  README.md  STORAGE.md
contracts/: ITC.sol
crates/itc-anchor/: Cargo.toml
crates/itc-anchor/src/: tx.rs
crates/itc-evm/: Cargo.toml
crates/itc-evm/src/: executor.rs
crates/itc-node/: Cargo.toml
crates/itc-node/src/: chain.rs  main.rs  sequencer.rs  store.rs  sync.rs
crates/itc-oracle/: Cargo.toml
crates/itc-oracle/src/: deposit.rs  lib.rs  oracle.rs  utxo.rs
crates/itc-proto/: Cargo.toml
crates/itc-proto/src/: script.rs  signer_util.rs
crates/itc-rpc/: Cargo.toml
crates/itc-rpc/src/: ecrecover.rs  handler.rs  lib.rs  server.rs
docs/: ARCHITECTURE.md  BRIDGE.md
