[package]
name = "itc-rpc"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ITC-L2 eth_* JSON-RPC server — MetaMask-compatible Ethereum JSON-RPC over HTTP."

[dependencies]
itc-evm   = { path = "../itc-evm" }
itc-proto = { path = "../itc-proto" }

tiny_http  = "0.12"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hex        = "0.4"
rlp        = "0.5"

# k256 — secp256k1 ECDSA with EIP-155 recovery (Ethereum standard)
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
sha3 = "0.10"
